# napari-simpleitk-image-processing

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: git-bob.yml  test_and_deploy.yml
.napari/: config.yml
docs/: demo.ipynb
src/napari_simpleitk_image_processing/: __init__.py  _bia_bob_plugins.py  _function.py  _simpleitk_image_processing.py
src/napari_simpleitk_image_processing/_tests/: test_function.py
