[metadata]
name = napari-simpleitk-image-processing
version = 0.1.3
author = Robert Haase
author_email = robert.haase@tu-dresden.de
url = https://github.com/haesleinhuepf/napari-simpleitk-image-processing
license = BSD-3-Clause
description = Process images using SimpleITK in napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/napari-simpleitk-image-processing/issues
    Documentation = https://github.com/haesleinhuepf/napari-simpleitk-image-processing#README.md
    Source Code = https://github.com/haesleinhuepf/napari-simpleitk-image-processing
    User Support = https://github.com/haesleinhuepf/napari-simpleitk-image-processing/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    simpleitk
    napari-tools-menu
    napari-time-slicer

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-simpleitk-image-processing = napari_simpleitk_image_processing
