[metadata]
name = napari-simpleitk-image-processing
version = 0.2.7
author = Robert Haase
author_email = robert.haase@tu-dresden.de
url = https://github.com/haesleinhuepf/napari-simpleitk-image-processing
license = BSD-3-Clause
description = Process and analyze images using SimpleITK in napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Framework :: napari
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/napari-simpleitk-image-processing/issues
    Documentation = https://github.com/haesleinhuepf/napari-simpleitk-image-processing#README.md
    Source Code = https://github.com/haesleinhuepf/napari-simpleitk-image-processing
    User Support = https://github.com/haesleinhuepf/napari-simpleitk-image-processing/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    simpleitk
    napari-tools-menu>=0.1.11
    napari-time-slicer
    napari-skimage-regionprops>=0.4.1
    napari-assistant
    pandas

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-simpleitk-image-processing = napari_simpleitk_image_processing
